[package]
name = "bevy_framepace"
version = "0.15.0"
edition = "2021"
resolver = "2"
description = "Frame pacing and frame limiting for Bevy"
license = "MIT"
repository = "https://github.com/ka-de/bevy_framepace"
documentation = "https://docs.rs/bevy_framepace"

[dependencies]
bevy_app = "0.13.2"
bevy_ecs = "0.13.2"
bevy_diagnostic = "0.13.2"
bevy_log = "0.13.2"
bevy_render = "0.13.2"
bevy_reflect = "0.13.2"
bevy_time = "0.13.2"
bevy_utils = "0.13.2"
bevy_window = "0.13.2"
bevy_winit = "0.13.2"
# Non-bevy
spin_sleep = "1.0"

[features]
default = ["framepace_debug", "bevy_winit/x11"]
framepace_debug = []

[dev-dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_gizmos",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi-threaded",
    "x11",
] }

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["default"]

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["default"]
